# xsLLhFitter

./: chi2.txt  make_xsLLhFitter.sh  setup.sh
CVS/: Entries  Repository
anaevents/CVS/: Repository
anaevents/src/: AnaEvent.hh  AnaSample.cc  AnySample.cc  AnySample.hh  anyTreeMC.cc  anyTreeMC.hh
cmake/: CMakeSetup.sh
cmake/CVS/: Entries  Repository
fitparam/CVS/: Repository
fitparam/src/: AnaFitParameters.cc  AnaFitParameters.hh  CMakeLists.txt  DetParameters.cc  DetParameters.hh  FSIParameters.cc  FSIParameters.hh  FitParameters.cc  FitParameters.hh  FluxParameters.cc  FluxParameters.hh  FluxParameters_norm.cc  FluxParameters_norm.hh  NuclFSIParameters.cc  NuclFSIParameters.hh  ResponseParameters.cc  ResponseParameters.hh  XsecParameters.cc  XsecParameters.cc.old010916  XsecParameters.cc.old060716  XsecParameters.cc.old240616  XsecParameters.cc.old280616  XsecParameters.cc.old290616  XsecParameters.cc.original  XsecParameters.hh  XsecParameters.hh.old010916  (+4 more)
include/: ResponseParameters.hh
inputs/: detCovBinning.txt  detCovMatCoarse.root  detCovMatFine.root  dptbinning.txt
macros/: RunConvertor.sh  calcCovMat.C  calcCovMat_fine.C  calcEnuXSecWithErrors.cc  calcXSecWithErrors.cc  calcXSecWithErrors.cc.150916  calcXSecWithErrors.cc.22.06.16  genResponse_dpt.C  runGenResponse.sh  testPlotOut.root  treeConvert.cc  treeConvert.cc.original  treeConvert.h
minerva/: CutsandCorrections.cpp  CutsandCorrections.h  Makefile  setup.sh
src/: CMakeLists.txt  ccqefit.cc  ccqefit.cc.EnuDep.280616  ccqefit.cc.original
src/CVS/: Entries  Repository
(+270 files in other folders)
